// Sample DBML-like DSL input
// ─────────────────────────────────────────────────────────────

Table users {
  id int [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password_hash text [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp

  indexes {
    email [unique]
    (username, email) [name: 'idx_user_lookup']
  }

  Note: 'Người dùng hệ thống'
}

Table posts {
  id int [pk, increment]
  title varchar(200) [not null]
  body text
  author_id int [not null]
  status post_status [default: 'draft']
  published_at datetime
  created_at timestamp
}

Enum post_status {
  draft
  published
  archived [note: 'Bài viết đã lưu trữ']
}

Table comments {
  id int [pk, increment]
  post_id int [not null]
  user_id int [not null]
  content text [not null]
  created_at timestamp
}

// Relationships
Ref: posts.author_id > users.id
Ref: comments.post_id > posts.id
Ref: comments.user_id > users.id

TableGroup blog {
  users
  posts
  comments
}
